--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,8 @@
         Bine ai venit la ușa pe care o deschide!
     </p>
     <svg [attr.width]="size" [attr.height]="size">
-      <g *ngFor="let triangle of triangles; let i = index">
+          
+      <g *ngFor="let triangle of triangles; let i = index"(click)="goToPage(triangle.link)">
         
         <polygon 
           [attr.points]="triangle.points" 
@@ -27,19 +28,6 @@
         {{ line }}
         </tspan>
         </text>
-
-    
-        <!-- Clickable router link using foreignObject -->
-        <foreignObject 
-          [attr.x]="triangle.linkX" 
-          [attr.y]="triangle.linkY" 
-          width="100" height="30"
-          style="overflow: visible;"
-        >
-          <a [routerLink]="triangle.link" style="display: block; width: 100%; height: 100%;">
-            <div style="width: 100%; height: 100%;"></div> <!-- Transparent clickable area -->
-          </a>
-        </foreignObject>
         
       </g>
     </svg>
