--- a/src/app/pages/lesson-detail/lesson-detail.component.html
+++ b/src/app/pages/lesson-detail/lesson-detail.component.html
@@ -1,1 +1,15 @@
-<p>lesson-detail works!</p>
+<h2>{{ topic | titlecase }} - {{ subject | titlecase }} - clasa a {{ grade | titlecase }}-a</h2>
+
+<ul>
+  <li *ngFor="let lesson of lessons">
+    <h3>{{ lesson.title }}</h3>
+  
+      <button (click)="loadLessonContent(lesson)">Vezi conținut</button>
+
+      <div *ngIf="lessonHtml[lesson.id]" [innerHTML]="lessonHtml[lesson.id]"></div>
+  </li>
+</ul>
+
+<div *ngIf="lessons.length === 0">
+  <p>No lessons found.</p>
+</div>
