--- a/src/app/pages/quizzes/quizzes.component.html
+++ b/src/app/pages/quizzes/quizzes.component.html
@@ -1,1 +1,3 @@
-<p>quizzes works!</p>
+<div class="subject-block" *ngFor="let quiz of quizzes" (click)="openQuiz(quiz)">
+  <h3>{{ quiz.title }}</h3>
+</div>
